--- a/style/style.css
+++ b/style/style.css
@@ -4,6 +4,39 @@
     padding:0px;
     box-sizing: border-box;
   }
+   /* share code */
+
+  .container {
+    width: 85%;
+    max-width: 1360px;
+    margin: 0 auto;
+}
+
+.green-text {
+    color: #469165;
+}
+
+
+.section-heading {
+    font-size: 48px;
+    font-weight: bold;
+    text-align: center;
+    margin-bottom: 16px;
+}
+
+.icon {
+    background-color: #F95555;
+    border-radius: 50%;
+    object-fit: cover;
+    padding: 10px;
+}
+
+#solution,
+#cta-section,
+footer {
+    margin-top: 120px;
+}
+
 
   /* font-family*/
   .font-family{
@@ -151,3 +184,49 @@
     transition: 1s;
     transform: translate(14px);
 }
+
+  /* hero section is end  */
+  /* ---------problem section style start-------- */
+#problem .problem-container {
+    padding-top: 50px;
+}
+
+#problem .problem-container .problem-heading p {
+    font-size: 16px;
+    line-height: 20px;
+    color: #627382;
+    margin-bottom: 44px;
+    text-align: center;
+}
+
+#problem .problem-container .card-box {
+    display: flex;
+    gap: 24px;
+}
+
+.problem-container .card-box .card {
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 24px;
+    border-radius: 8px;
+    box-shadow:  0 0 8px 0 rgba(0, 0, 0, 0.06);
+    background: rgba(255, 255, 255, 1);
+}
+
+.problem-container .card-box .card h4 {
+    font-size: 24px;
+    font-weight: 600;
+    margin-top: 16px;
+    margin-bottom: 16px;
+    color: #001931;
+}
+
+.problem-container .card-box .card p{
+    font-size:16px;
+    line-height:20px ;
+    color:#627382 ;
+}
+/* ---------problem section style end-------- */
